Added java 11 dependencies